# Strava_NoShoes

./: .dockerignore  .env.example  .env.secondary.example  .gitignore  AGENTS.md  DOCKER_DEPLOYMENT.md  Dockerfile  MULTI_INSTANCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  forecast_routes.py  routes.py
app/models/: __init__.py  database.py  forecast.py  strava.py
app/services/: __init__.py  bot_service.py  forecast_service.py  garmin_service.py  strava_service.py  unified_service.py
app/templates/: index.html  race_forecast.html
app/utils/: __init__.py  auth.py  file_utils.py  gpx_cleanup.py
scripts/: backup_strava.py
tests/: __init__.py  test_forecast_service.py  test_main.py  test_strava_runtime.py
